# mu-pipelines-interfaces

./: .coveragerc  .gitignore  .gitlab-ci.yml  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-module.yml
mu_pipelines_interfaces/: configuration_provider.py  destination_module_interface.py  execute_module_interface.py  widget.py
mu_pipelines_interfaces/config_types/: connection_properties.py  job_config.py
test/: test_fib.py
