[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mu_pipelines_interfaces"
authors = [
    {name = "MosaicSoft", email = "josh.m.reilly@gmail.com"},
]
description = "mu_pipelines_interfaces"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mu"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    
]
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]

[tool.pyright]
venvPath = "."
venv = ".venv"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/