[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mu_pipelines_interfaces"
authors = [
    {name = "MosaicSoft", email = "mupipelines@gmail.com"},
]
description = "mu_pipelines_interfaces"
documentation = "https://mosaicsoft-data.github.io/mu-pipelines-doc/"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["data movement", "spark", "etl"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    
]
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]

[tool.pyright]
venvPath = "."
venv = ".venv"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/